# SpinQuest-TDC-FW

./: README.md  config.yaml
DAQ-Simulator/: CMakeLists.txt  README.md
DAQ-Simulator/include/: defined_utilites.h
DAQ-Simulator/src/: fpga_main.cpp  server_main.cpp
DAQClient/: Autopilot.py  Log.py  State.py  WebClient.py
Top/vivado/TDC_64ch_1BRAM/: hog.conf
Top/vivado/TDC_64ch_1BRAM/list/: xil_defaultlib.src
Top/vivado/TDC_64ch_2BRAM/list/: sources.con  xil_defaultlib.src
kaleb-projects/: .gitignore  CMakeLists.txt  README.md  UniqueFD.cpp
kaleb-projects/include/: CMakeLists.txt  UniqueFD.h  daq_server.h  defined_utilites.h  defined_utilities.h  fake_fpga_client.h  parseArgs.h
kaleb-projects/src/: Makefile  UniqueFD.cpp  daq_server.cpp  defined_utilities.cpp  fake_fpga_client.cpp  fpga_main.cpp  main.cpp  send_data.cpp  server.cpp  server_main.cpp
sources/sim/: tb_1BRAM.vhd  tb_2BRAM.vhd
sources/src/: CoarseCounter.vhd  TDC_32ch.vhd  TDC_4ch.vhd  TDC_64ch_1BRAM.vhd  TDC_64ch_2BRAM.vhd  TDC_channel.vhd  common_types.vhd  encoder.vhd  ring_buffer.vhd  rr_arbiter_321.vhd  rr_arbiter_41.vhd  sampler.vhd  top_1BRAM.vhd  top_2BRAM.vhd
sources/top/: design_64ch_2BRAM_wrapper.vhd
